--- a/src/app/products-table/products-table.component.html
+++ b/src/app/products-table/products-table.component.html
@@ -9,6 +9,7 @@
             <th scope="col">Nome</th>
             <th scope="col">Preço</th>
             <th scope="col">Categoria</th>
+            <th scope="col">Opções</th>
           </tr>
         </thead>
         <tbody>
@@ -17,6 +18,7 @@
             <td>{{product.name}}</td>
             <td>{{product.price}}</td>
             <td>{{product.category}}</td>
+            <td><button class="btn btn-danger" (click)="delete(product)"> Remover </button></td>
           </tr>
       
         </tbody>
