--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -1,19 +1,19 @@
 <div class="container">
     <h1> Cadastro de Produto:</h1>
-    <form>
+    <form [formGroup]="formGroupProduct">
     <div class="mb-3">
         <label for="name" class="form-label">Nome:</label>
-        <input type="text" class="form-control" id="name" placeholder="Digite o seu nome:">
+        <input formControlName="name" type="text" class="form-control" id="name" placeholder="Digite o seu nome:">
       </div>
       <div class="mb-3">
         <label for="price" class="form-label">Preço</label>
-        <input type="text" class="form-control" id="price" placeholder="Digite o Preço:">
+        <input formControlName="price" type="text" class="form-control" id="price" placeholder="Digite o Preço:">
       </div>
       <div class="mb-3">
         <label for="category" class="form-label">Categoria:</label>
-        <input type="text" class="form-control" id="category" placeholder="Digite a Categoria:">
+        <input formControlName="category" type="text" class="form-control" id="category" placeholder="Digite a Categoria:">
       </div>
-
-      <button type="button" class="btn-primary">Salvar</button>
+      
+      <button type="button" class="btn btn-primary" (click)="update()">Salvar</button>
     </form>
 </div>
