navbar, botao editar e botao salvar

--- a/src/app/product-form/product-form.component.html
+++ b/src/app/product-form/product-form.component.html
@@ -14,6 +14,8 @@
         <input formControlName="category" type="text" class="form-control" id="category" placeholder="Digite a Categoria:">
       </div>
       
-      <button type="button" class="btn btn-primary" (click)="update()">Salvar</button>
+      <button *ngIf="isEditing" type="button" class="btn btn-primary" (click)="update()">Salvar</button>
+
+      <button *ngIf="!isEditing" type="button" class="btn btn-primary" (click)="save()">Criar</button>
     </form>
 </div>
